--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <div class="window">
         <div id="slides" class="images">
-            <img src="/5.jpg" alt="图1" width="800" height="600">
-            <img src="/7.jpg" alt="图2" width="800" height="600">
-            <img src="/2.png" alt="图3" width="800" height="600">
-            <img src="/4.png" alt="图4" width="800" height="600">
+            <img src="https://i.loli.net/2018/08/27/5b83e9cc168de.jpg" alt="图1" width="800" height="600">
+            <img src="https://i.loli.net/2018/08/27/5b83e9de45384.jpg" alt="图2" width="800" height="600">
+            <img src="https://i.loli.net/2018/08/27/5b83e9fe985f6.png" alt="图3" width="800" height="600">
+            <img src="https://i.loli.net/2018/08/27/5b83e9fbc1f45.png" alt="图4" width="800" height="600">
         </div>
     </div>
     <div id="buttonWrapper" style="text-align: center">
